test/error/13.c
int main(void){
    int k = a + b;
}